cabal-version:      2.4
name:               hello
version:            0.1.0.0

author:             jhr
maintainer:         jhr

extra-source-files: CHANGELOG.md

executable hello
    main-is:          Main.hs

    default-extensions:
     --  BangPatterns
     --  BinaryLiterals
     --  ConstraintKinds
     --  DataKinds
     --  DefaultSignatures
     --  DeriveAnyClass
     --  DeriveDataTypeable
     --  DeriveFoldable
     --  DeriveFunctor
     --  DeriveGeneric
     --  DeriveLift
     --  DeriveTraversable
     --  DerivingStrategies
     --  InstanceSigs
     --  KindSignatures
     --  LambdaCase
     --  NoStarIsType
     --  PolyKinds
     --  RankNTypes
     --  ScopedTypeVariables
     --  StandaloneDeriving
     --  TupleSections
     --  TypeApplications
     --  TypeFamilies
     --  TypeOperators
     --  ViewPatterns

     --  -- TemplateHaskell is used to support convenience functions such as
     --  -- 'listToVecTH' and 'bLit'.
     --  TemplateHaskell
     --  QuasiQuotes

     --  -- Prelude isn't imported by default as Clash offers Clash.Prelude
     --  NoImplicitPrelude


    ghc-options:     
        -Wall -Wcompat
        ---haddock

        -- Plugins to support type-level constraint solving on naturals
     --  -fplugin GHC.TypeLits.Extra.Solver
     --  -fplugin GHC.TypeLits.Normalise
     --  -fplugin GHC.TypeLits.KnownNat.Solver

        -- Clash needs access to the source code in compiled modules
       -- -fexpose-all-unfoldings

        -- Worker wrappers introduce unstable names for functions that might have
        -- blackboxes attached for them. You can disable this, but be sure to add
        -- a no-specialize pragma to every function with a blackbox.
      --  -fno-worker-wrapper

    build-depends:    
        base          >= 4.7 && <5
--      , ffmpeg-light
    --  , clash-prelude >= 1.6.3 && < 1.8
  --    , ghc-typelits-natnormalise
 --     , ghc-typelits-extra
   --   , ghc-typelits-knownnat

    hs-source-dirs:   app
    default-language: Haskell2010
